# text-analyzer

./: .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  env_example  pyproject.toml  requirements.txt  supervisord.conf  wsgi.py
nginx/: nginx.conf
src/: run.py
src/app/: __init__.py  consts.py  error_handlers.py  main.py  router.py  service.py
src/app/blueprints/: analytics_blueprint.py  functions_bluprint.py  functions_bp.py  history_blueprint.py  history_bp.py  main_blueprint.py  main_bp.py
src/app/files/: Business_Proposal.docx  Lo_scenario_per_il_progetto_italiano_la_parta_di_grammatica.docx  Risk_analysis.docx  d901e9c5-33ac-4f2f-98a2-be0b591a5063_home_assignment_5.docx  d901e9c5-33ac-4f2f-98a2-be0b591a5063_home_assignment_6.docx  docx  home_assignment_3.docx  normokontrol.docx
src/app/services/: analytics.py  document.py  file.py  functions.py  history.py  nlp.py  redis.py  redis_service.py  text.py
src/app/templates/: 404.html  index.html
src/app/templates/partials/: 404.html  error.html  history.html  lemmatization.html  ner.html  processing.html  result.html  result_with_history.html  word-cloud.html
src/app/utils/: cleanup.py  config.py  custom_exception.py  custom_exceptions.py  decorators.py  env_loader.py  logging.py  strtobool.py
src/broker/: celery_init.py  tasks.py  worker.py
src/celery/: tasks.py  worker.py
src/db/: redis.py  redis_client.py
src/db/redis/: client.py
src/static/: styles.css
