[tool.poetry]
name = "textanalyzator"
version = "0.1.0"
description = ""
authors = ["Daytona1315 <155112376+Daytona1315@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
gunicorn = "^23.0.0"
werkzeug = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
