[tool.poetry]
name = "textanalyzator"
version = "0.1.0"
description = ""
authors = ["Daytona1315 <155112376+Daytona1315@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
flask = "^3.1.1"
gunicorn = "^23.0.0"
celery = "^5.3.6"
werkzeug = "^3.1.3"
python-docx = "^1.1.2"
pypdf2 = "^3.0.1"
redis = "^6.2.0"
flask-session = "^0.8.0"
wordcloud = "^1.9.4"
compressed-rtf = "^1.0.7"
spacy = "^3.8.7"
langid = "^1.1.6"
colorlog = "^6.9.0"
python-dotenv = "^1.2.1"
supervisor = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)"
]
